Added all pages and active navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ a {
 
 /* NAVIGATION BAR SETTINGS */
 .header {
-    background: #0a0f0c;
+    background: #1b95e1;
     color: #fff;
     height: 75px;
 }
