--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,11 +113,11 @@ nav a.active {
 }
 
 .main-section-image .container {
-    height: 600px;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: start;
+    align-items: end;
+    justify-content: end;
 }
 
 .main-heading {
@@ -126,8 +126,7 @@ nav a.active {
     padding: 20px;
     opacity: 0.9;
     color: #e56c0a;
-    flex-basis: 50%;
-    align-items: center;
+    flex-basis: 60%;
 }
 
 .main-heading h1 {
@@ -135,5 +134,6 @@ nav a.active {
 }
 
 .main-heading p {
-    font-size: 25px;
+    font-size: 20px;
+    text-align: justify;
 }
