--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,17 @@
 body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
+    line-height: 1.5;
 }
 
 h1,
 h2 {
     font-family: Montserrat, sans-serif;
     text-transform: uppercase;
-    letter-spacing: 5px;
+    letter-spacing: 2px;
     margin-bottom: 15px;
+    color: #e56c0a;
+    font-weight: bold;
 }
 
 img {
@@ -47,6 +50,8 @@ a {
 }
 
 .header .logo {
+    text-transform: uppercase;
+    letter-spacing: 5px;
     color: #e56c0a;
     font-size: 28px;
     font-weight: 900;
@@ -136,4 +141,32 @@ nav a.active {
 .main-heading p {
     font-size: 20px;
     text-align: justify;
+}
+
+/* FITNESS EQUIPMENT */
+#fitness-equipment .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card {
+    text-align: center;
+    flex: 40%;
+    color: #000;
+    margin: 20px 10px;
+    padding: 15px 20px;
+}
+
+.card p{
+    text-align: justify;
+}
+
+.card img{
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    padding: 5px;
+    border: 2px solid #e56c0a;
 }
