--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ a {
 .header {
     background: #fff;
     height: 75px;
+    border-bottom: 2px solid black;
 }
 
 .header .logo {
@@ -93,6 +94,7 @@ nav a.active {
 #main-section {
     height: 600px;
     width: 100%;
+    border-bottom: 2px solid black;
 }
 
 .main-section-image {
@@ -123,7 +125,7 @@ nav a.active {
     flex-wrap: wrap;
     align-items: end;
     justify-content: end;
-}
+    }
 
 .main-heading {
     margin-bottom: 25px;
@@ -131,6 +133,7 @@ nav a.active {
     padding: 20px;
     flex-basis: 60%;
     border-radius: 3%;
+    border: 2px solid black;
 }
 
 .main-heading h1 {
@@ -148,6 +151,7 @@ nav a.active {
 #fitness-equipment{
     background-color: #e56c0a;
     padding: 20px;
+    border-bottom: 2px solid black;
 }
 #fitness-equipment .container {
     display: flex;
@@ -165,6 +169,7 @@ nav a.active {
     margin: 10px 10px;
     padding: 15px 20px;
     line-height: 1.6;
+    border: 2px solid black;
 }
 
 .card p{
@@ -189,6 +194,11 @@ nav a.active {
 #my-footer{
     background-color:#fff;
 }
+
+#my-footer i{
+    font-size:36px;
+    margin-right: 25px;
+}
 #my-footer .container {
     display: flex;
     flex-wrap: wrap;
@@ -203,6 +213,7 @@ nav a.active {
     padding: 15px 20px;
     background-color: #e56c0a;
     border-radius: 3%;
+    border: 2px solid black;
 }
 .footer-card span{
     font-weight: 700;
@@ -213,6 +224,7 @@ nav a.active {
   .footer-card h2{
     color:#fff;
     margin-top: 15px;
+    border-bottom: 2px solid #fff;
   }
 /*RESPONSIVE FOR SMALLER DEVICES */
 @media (max-width: 768px) {
