--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,12 +182,12 @@ nav a.active {
     text-align: center;
 }
 .card img{
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 180px;
+    max-height: 180px;
     border-radius: 50%;
     margin-bottom: 20px;
-    padding: 5px;
-    border: 2px solid #e56c0a;
+    padding: 25px;
+    border: 5px solid #e56c0a;
 }
 
 /* FOOTER */
@@ -198,6 +198,7 @@ nav a.active {
 #my-footer i{
     font-size:36px;
     margin-right: 25px;
+    color:#fff
 }
 #my-footer .container {
     display: flex;
