--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,24 +264,28 @@ nav a.active {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    vertical-align:middle;
 }
 
 .nutrition-left {
     background-color: #fff;
     padding: 10px;
-    flex: 30%;
+    flex: 20%;
     margin-bottom: 20px;
+    text-align: center;
 }
 .nutrition-left img{
     background-color: #fff;
     padding: 20px;
+    max-width: 250px;
+    max-height: 250px;
+    
 }
 .nutrition-right {
     background-color: #fff;
-    padding: 10px;
+    padding: 20px;
     flex: 60%;
     margin-bottom: 20px;
-    padding: 25px;
 }
 .nutrition-right p {
     font-size: 18px;
