--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ nav a.active {
 /* MAIN IMAGE BELOW NAVIGATION BAR SETTINGS */
 /* ------------------------*/
 .main-section {
-    height: 600px;
+    height: 500px;
     width: 100%;
     border-bottom: 2px solid black;
 }
@@ -101,7 +101,7 @@ nav a.active {
     color: #e56c0a;
     height: 100%;
     width: 100%;
-    background: url('../images/fitness_factory_main.jpg') no-repeat center center;
+    background: url('../images/fitness_factory_main.webp') no-repeat center center;
     /* APLYING MAIN IMAGE TRANSFORMATION*/
     animation-name: opacity-up;
     animation-duration: 3s;
