--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,8 +244,8 @@ nav a.active {
 }
 
 .card img {
-    max-width: 180px;
-    max-height: 180px;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
     margin-bottom: 20px;
     padding: 25px;
