Fixed nutrition banner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ nav a.active {
 
 .main-heading h1 {
     color: #fff;
-    font-size: 28x;
+    font-size: 28px;
 }
 
 .main-heading p {
@@ -191,7 +191,7 @@ nav a.active {
     color: #e56c0a;
     height: 100%;
     width: 100%;
-    background: url('../images/fitness_factory_main_signup.jpg') no-repeat center center;
+    background: url('../images/fitness_factory_main_signup.webp') no-repeat center center;
     /* APLYING MAIN IMAGE TRANSFORMATION*/
     animation-name: opacity-up;
     animation-duration: 3s;
